--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -1,3 +1,5 @@
+/* Global */
+
 body {
   background-image: url("./images/AvengersTonyStark.jpg");
   background-repeat: no-repeat;
@@ -7,12 +9,42 @@ body {
 h1 {
   font-family: 'Vollkorn SC', serif;
   font-size: 50px;
-  
 }
+
+/* Stark Industries title */
+
+.glow {
+  font-size: 70px;
+  color: brown;
+  text-align: center;
+  -webkit-animation: glow 0.8s ease-in-out infinite alternate;
+  -moz-animation: glow 0.8s ease-in-out infinite alternate;
+  animation: glow 0.8s ease-in-out infinite alternate;
+}
+
+@-webkit-keyframes glow {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px white, 0 0 40px white, 0 0 50px white, 0 0 60px white, 0 0 70px white;
+  }
+  to {
+    text-shadow: 0 0 20px #fff, 0 0 30px lightseagreen, 0 0 40px lightseagreen, 0 0 50px lightseagreen, 0 0 60px lightseagreen, 0 0 70px lightseagreen, 0 0 80px lightseagreen;
+  }
+}
+ 
+.taw-container {
+  display: flex;
+  align-items: row;
+  justify-content: space-between;
+  margin: 0 200px;
+}
+
+
+/* Clock */
 
 .time-date-container {
   display: flex;
   flex-direction: column;
+  align-items: column;
   justify-content: space-between;
   border: 4px solid black;
   border-radius: 8px;
@@ -38,43 +70,89 @@ h1 {
   font-family: 'Saira Stencil One', cursive;
 }
 
-.glow {
-  font-size: 70px;
+/* Tabs */
+.tab-title {
+  display: inline-block;
   color: brown;
-  text-align: center;
-  -webkit-animation: glow 0.8s ease-in-out infinite alternate;
-  -moz-animation: glow 0.8s ease-in-out infinite alternate;
-  animation: glow 0.8s ease-in-out infinite alternate;
+  width: 250px;
+  text-shadow: -1.5px 0 black, 0 1.5px black, 1.5px 0 black, 0 -1.5px black;
 }
 
-@-webkit-keyframes glow {
-  from {
-    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px white, 0 0 40px white, 0 0 50px white, 0 0 60px white, 0 0 70px white;
-  }
-  to {
-    text-shadow: 0 0 20px #fff, 0 0 30px lightseagreen, 0 0 40px lightseagreen, 0 0 50px lightseagreen, 0 0 60px lightseagreen, 0 0 70px lightseagreen, 0 0 80px lightseagreen;
-  }
+.tabs-container {
+  display: flex;
+  border: 3px solid black;
+  border-radius: 8px;
+  width: 495px;
+  justify-content: space-around;
 }
+
+.tab-header {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  font-size: 20px;
+  font-weight: 300;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+.tab-header li {
+  padding: 5px;
+  font-family: 'Permanent Marker', cursive;
+  color: #ad3945;
+  background-color: #6f719a;
+  opacity: .9;
+}
+
+.tab-header li:hover {
+  background-color: #ad3945;
+  color: #6f719a;
+  cursor: pointer;
+}
+
 
 #one {
   background-image: url("./images/TonyStarkOkay.gif");
   background-repeat: no-repeat;
-  height: 260px;
-  width: 500px;
+  height: 280px;
+  width: 495px;
 }
 
 #two {
   background-image: url("./images/ThanosSnap.gif");
   background-repeat: no-repeat;
-  height: 260px;
-  width: 500px;
+  height: 280px;
+  width: 495px;
+   background-size: cover;
 }
 
 #three {
   background-image: url("./images/TonySnap.gif");
   background-repeat: no-repeat;
-  height: 260px;
-  width: 500px;
+  height: 280px;
+  width: 495px;
+}
+
+/* Weather */
+
+.weather-title {
+
+}
+
+.weather-container {
+  border: 3px solid black;
+  border-radius: 5px;
+  width: 495px;
+  height: 335px;
+  background-image: url("./images/InfinityStark.jpg");
+  background-size: 100%;
+  color: whitesmoke;
+  font-family: 'Permanent Marker', cursive;
+  /* align-items: column;
+  justify-content: center; */
+  font-size: 25px;
+  opacity: .85;
 }
 
 /* for autocomplete background image
